# oh-my-pi

crates/libedit/: Cargo.toml  build.rs
crates/libedit/src/: applicator.rs  diff.rs  error.rs  fs.rs  fuzzy.rs  hashline.rs  lib.rs  napi_bindings.rs  normalize.rs  parser.rs  traits.rs  wasm_bindings.rs
crates/libedit/src/methods/: codex_patch_method.rs  hashline_method.rs  mod.rs  patch_method.rs  replace_method.rs
crates/libedit/src/prompts/: codex_apply_patch.md  hashline.md  patch.md  replace.md
crates/libedit/src/schemas/: codex_apply_patch.json  hashline.json  patch.json  replace.json
crates/libedit/tests/: hashline_methods.rs  patch_methods.rs  replace_methods.rs
crates/libedit/tests/common/: mod.rs
crates/pi-natives/: Cargo.toml
crates/pi-natives/src/: lib.rs  libedit.rs
