[package]
name = "libedit"
version = "0.1.0"
edition = "2024"
description = "Pure Rust library for structured file editing: hashline, replace, and patch modes"
license = "MIT"

[features]
default = []
napi = ["dep:napi", "dep:napi-derive", "dep:napi-build"]
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:js-sys"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
crc32fast = "1"
similar = "2"
parking_lot = "0.12"

# Optional: NAPI
napi = { version = "3", features = ["serde-json"], optional = true }
napi-derive = { version = "3", optional = true }

# Optional: WASM
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "3"

[lib]
crate-type = ["lib", "cdylib"]

[build-dependencies]
napi-build = { version = "2", optional = true }
